<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">企达IM</string>
    <string name="permission_hint">该权限是必要的权限，请点击允许</string>
    <string name="pull_to_refresh">上拉刷新&#8230;</string>
    <string name="str_loading">正在载入&#8230;</string>
    <string name="release_refresh">放开刷新&#8230;</string>
    <string name="str_out">退出</string>
    <string name="network_error">当网络不可用, 请检查网络</string>
    <string name="location_cannot_be_searched">搜索不到位置信息</string>
    <string name="str_location">位置</string>
    <string name="baidu_map">百度地图</string>
    <string name="gaode_map">高德地图</string>
    <string name="str_note">签名</string>
    <string name="str_upload">上传</string>
    <string name="str_opening">正在打开&#8230;</string>
    <string name="get_group_file_error">获取群文件失败: </string>
    <string name="file_not_support">文件类型不支持</string>
    <string name="operation_error">操作失败: </string>
    <string name="login_out_error">退出失败: </string>
    <string name="str_with">与</string>
    <string name="install_wechat">请先安装微信</string>
    <string name="opening_file">正在打开文件&#8230;</string>
    <string name="open_camera_error">打开相机出错: </string>
    <string name="your_account_was_kicked_offline_by_admin">您的账号被管理员踢除下线了</string>
    <string name="your_account_was_kicked_offline_reload">您的账号已经被踢下线，请重新登录</string>
    <string name="your_account">您的账号于</string>
    <string name="landing_on_another_device">在另一设备登陆。如非本人操作，建议及时修改密码</string>
    <string name="pwd_modify_reload">密码已修改，请重新登录</string>
    <string name="input_length_too_longer">你输入的字数已经超过了限制！</string>
    <string name="upload_pic_error">图片上传失败: </string>
    <string name="mass_message">群发消息</string>
    <string name="str_mass">群发: </string>
    <string name="str_recv">接收者: </string>
    <string name="number_exceeding_limit">人数超出限制</string>
    <string name="about_version">开发版本</string>
    <string name="im_text_sign_enter">请输入签收消息</string>
    <string name="search_msg_history">搜索聊天记录</string>
    <string name="search_user">搜索用户名/简拼/手机号</string>
    <string name="search_group">搜索群名称</string>
    <string name="text_draft">[草稿]</string>
    <string name="text_scan">扫一扫</string>
    <string name="secret_chat">密聊</string>
    <string name="title_back">返回</string>
    <string name="title_save">保存</string>
    <string name="title_close">关闭</string>
    <string name="title_sure">确定</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_more">更多</string>
    <string name="login_setting">网络设置</string>
    <string name="login_cancel">取消</string>
    <string name="login_toast_account_empty">用户名不能为空</string>
    <string name="login_toast_password_empty">密码不能为空</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_loading">正在登录&#8230;</string>
    <string name="login_init">正在获取群组、好友、应用&#8230;</string>
    <string name="login_get_group">正在获取群组信息&#8230;</string>
    <string name="login_get_friend">正在获取好友信息&#8230;</string>
    <string name="login_get_dept">正在获取组织架构信息&#8230;</string>
    <string name="login_get_user_info">正在获取用户信息&#8230;</string>
    <string name="login_body_count">正在统计人数&#8230;</string>
    <string name="login_get_token">正在获取令牌&#8230;</string>
    <string name="login_update_token">正在刷新令牌&#8230;</string>
    <string name="login_network_error">(网络未连接)</string>
    <string name="login_pwd_error">密码错误，请重新登录</string>
    <string name="login_server_error">服务器连接不上，请重新登录</string>
    <string name="ls_setting">登陆设置</string>
    <string name="ls_server">地址</string>
    <string name="ls_port">端口</string>
    <string name="ls_server_hint">请输入服务器地址</string>
    <string name="ls_port_hint">请输入服务器地址端口</string>
    <string name="ls_save">保存</string>
    <string name="ls_toast_server_ip_empty">请先填写服务器地址</string>
    <string name="ls_toast_server_port_empty">请先填写服务器端口</string>
    <string name="ls_tag_server_ip">填写服务器地址(IP或域名)</string>
    <string name="ls_tag_port">填写服务器端口</string>
    <string name="group_mine">我创建的</string>
    <string name="group_joined">我加入的</string>
    <string name="group_title">工作群组</string>
    <string name="group_create">创建</string>
    <string name="group_loading_detail">正在获取群信息&#8230;</string>
    <string name="group_get_error">获取群组信息错误: </string>
    <string name="group_forbidden_words">全员禁言中</string>
    <string name="user_detail_title">用户信息</string>
    <string name="user_detail_send_msg">发消息</string>
    <string name="user_detail_dept">部门</string>
    <string name="user_detail_job">职位</string>
    <string name="user_detail_mobile">手机</string>
    <string name="user_detail_ophone">座机</string>
    <string name="user_detail_email">邮箱</string>
    <string name="user_detail_sex">性别</string>
    <string name="user_detail_birthday">生日</string>
    <string name="user_detail_add_friend">加为好友</string>
    <string name="user_detail_del_friend">删除好友</string>
    <string name="user_detail_not_allow_chat_self">不能和自己聊天</string>
    <string name="user_detail_no_permission_chat">已开启高管模式，你不能主动对Ta发起聊天</string>
    <string name="user_detail_add_contact">添加到联系人</string>
    <string name="user_detail_remove_contact">移除联系人</string>
    <string name="user_detail_not_empty">还没有工作签名</string>
    <string name="user_detail_del_friend_error">删除好友失败: </string>
    <string name="user_detail_add_linkman_error">添加联系人失败</string>
    <string name="user_detail_del_linkman_error">删除联系人失败</string>
    <string name="chat_my_pc">我的电脑</string>
    <string name="chat_send">发送</string>
    <string name="chat_record">按住说话</string>
    <string name="chat_file_size_beyond">文件大小超出系统配置</string>
    <string name="chat_had_not_selected_delete_item">还没有选择删除选项</string>
    <string name="delete_selected_messages">确定删除选中的消息吗</string>
    <string name="cannot_request_call_network_bad">当网络不可用，无法发起通话</string>
    <string name="cannot_request_call_chat_offline">对方不在线，无法发起通话</string>
    <string name="select_file">选择文件</string>
    <string name="select_pic">选择图片</string>
    <string name="file_management_application_not_found">未找到文件管理应用，请安装文件管理应用后再试</string>
    <string name="file_length_is_zero">文件大小为0</string>
    <string name="file_must_contain_suffixes">文件必须包含后缀</string>
    <string name="time_less_than_1s">时间小于1s</string>
    <string name="voice">[语音]</string>
    <string name="image">[图片]</string>
    <string name="shoot">[小视频]</string>
    <string name="file">[文件]</string>
    <string name="location">[位置]</string>
    <string name="secret_message">[阅后即焚]</string>
    <string name="revoke_msg">撤回了一条消息</string>
    <string name="str_you">您</string>
    <string name="re_edit"> 重新编辑</string>
    <string name="str_unread">未读</string>
    <string name="you_recommend">您推荐了</string>
    <string name="recommend_to_you">向您推荐了</string>
    <string name="confirm_receipt">确认签收</string>
    <string name="already_signed">已签收</string>
    <string name="no_signed">未签收</string>
    <string name="shark_message">给你发了一条抖动消息</string>
    <string name="str_copy">复制</string>
    <string name="str_revoke">撤回</string>
    <string name="str_multi_sel">多选</string>
    <string name="str_drop_msg">销毁</string>
    <string name="str_collect">收藏</string>
    <string name="revoke_timeout">撤回失败，该消息发送时间已超过2分钟</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failed">收藏失败</string>
    <string name="drop_message_error">销毁消息失败</string>
    <string name="person_info_title">聊天设置</string>
    <string name="person_info_top">聊天置顶</string>
    <string name="person_info_history">查找聊天记录</string>
    <string name="person_info_clear">清空聊天记录</string>
    <string name="group_info_title">群聊设置</string>
    <string name="group_info_all_members">全体群成员</string>
    <string name="group_info_name">群名称</string>
    <string name="group_info_desc">群描述</string>
    <string name="group_info_nickname">群昵称</string>
    <string name="group_info_notice">群公告</string>
    <string name="group_info_history">查找群聊天记录</string>
    <string name="group_info_file">群共享</string>
    <string name="group_info_top">聊天置顶</string>
    <string name="group_info_shield">消息免打扰</string>
    <string name="group_inf_banned">全员禁言</string>
    <string name="group_info_clear">清空聊天记录</string>
    <string name="group_info_del_group">解散群组</string>
    <string name="group_info_exit_group">退出群组</string>
    <string name="group_info_set_manager">设置管理员</string>
    <string name="group_info_change_owner">转让群</string>
    <string name="group_info_sure">确定</string>
    <string name="group_info_del_group_title">确定解散群组?</string>
    <string name="group_info_exit_group_title">确定退出群组?</string>
    <string name="group_info_clear_title">聊天记录清空后不可恢复</string>
    <string name="group_info_clear_sure">确定清空</string>
    <string name="group_info_banned_hint">只允许群主发言</string>
    <string name="group_info_desc_empty">未添加群描述</string>
    <string name="group_notice_empty">暂无群公告</string>
    <string name="group_notice_issue">发布</string>
    <string name="group_notice_issue_success">发布成功</string>
    <string name="group_notice_issue_failed">发布失败: </string>
    <string name="group_notice_member_empty">已选人员列表为空</string>
    <string name="group_notice_get_error">获取通知列表失败: </string>
    <string name="group_notice_delete_error">删除群公告失败: </string>
    <string name="group_member_title">全体群成员</string>
    <string name="group_member_owner">群主</string>
    <string name="group_member_manager">管理员</string>
    <string name="group_member_warn_set_manager">正在设置管理员&#8230;</string>
    <string name="group_member_owner_cannot_manager">群主不能设为管理员</string>
    <string name="group_member_cannot_select_self">不能选择自己</string>
    <string name="group_member_selected_list_zero">请先选择成员</string>
    <string name="create_group_title">创建群组</string>
    <string name="create_group_hint">填写群名称(2~20字)</string>
    <string name="create_group_next">下一步</string>
    <string name="create_group_warning">请先填写群名称~。~</string>
    <string name="create_group_warning1">群名称应该是2~20字</string>
    <string name="create_group_loading">正在创建群组&#8230;</string>
    <string name="create_group_empty_member">人员为空，请至少选择一个成员</string>
    <string name="create_group_error">创建群组失败: </string>
    <string name="create_group_upload_icon_error">上传头像失败</string>
    <string name="contact_title">选择联系人</string>
    <string name="contact_sure">确 定</string>
    <string name="contact_had_count">已选择: </string>
    <string name="contact_edit">编 辑</string>
    <string name="contact_artwork">原图</string>
    <string name="max_selected">最大只能选择</string>
    <string name="str_item">项</string>
    <string name="contact_is_forward">是否转发</string>
    <string name="contact_forward_success">消息转发成功</string>
    <string name="modify_pwd_old">原密码</string>
    <string name="modify_pwd_new">新密码</string>
    <string name="modify_pwd_confirm">确认密码</string>
    <string name="modify_pwd_old_hint">请输入原密码</string>
    <string name="modify_pwd_new_hint">请输入新密码</string>
    <string name="modify_pwd_confirm_hint">请确认新密码</string>
    <string name="cancel">取消</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_time">选择时间</string>
    <string name="meeting_title">会议主题</string>
    <string name="meeting_title_hint">请输入会议主题</string>
    <string name="meeting_content">会议内容</string>
    <string name="meeting_content_hint">请输入会议内容</string>
    <string name="meeting_start_time">开始时间</string>
    <string name="meeting_start_time_hint">请选择开始时间</string>
    <string name="meeting_end_time">结束时间</string>
    <string name="meeting_end_time_hint">请选择结束时间</string>
    <string name="meeting_member">参会者</string>
    <string name="meeting_member_hint">请选择</string>
    <string name="meeting_start">发起会议</string>
    <string name="font_add_circle">&#xe607;</string>
</resources>