<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    android:orientation="vertical">

   <include
       android:id="@+id/view_ls_title"
       layout="@layout/title_bar" />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/dimen_margin_16"
       android:layout_marginTop="15dp"
       android:text="@string/ls_tag_server_ip"
       android:textSize="14sp"
       android:textColor="@color/colorTextUnFocused"
       />

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="44dp"
       android:background="@color/colorWhite"
       android:layout_marginTop="15dp">

      <TextView
          android:id="@+id/tv_ls_server"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginStart="@dimen/dimen_margin_16"
          android:text="@string/ls_server"
          android:textColor="@color/colorBlack"
          android:textSize="16sp" />

      <com.qd.longchat.view.QDXEditText
          android:id="@+id/et_ls_server"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginEnd="@dimen/dimen_margin_16"
          android:layout_toEndOf="@+id/tv_ls_server"
          android:background="@color/colorWhite"
          android:hint="@string/ls_server_hint"
          android:singleLine="true"
          android:textColor="@color/colorBlack"
          android:textColorHint="@color/colorTextUnFocused"
          android:paddingStart="20dp"
          android:textSize="16sp"
          android:maxEms="50"/>
   </RelativeLayout>

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/dimen_margin_16"
       android:layout_marginTop="15dp"
       android:text="@string/ls_tag_port"
       android:textSize="14sp"
       android:textColor="@color/colorTextUnFocused"
       />

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="44dp"
       android:layout_marginTop="15dp"
       android:background="@color/colorWhite">

      <TextView
          android:id="@+id/tv_ls_port"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginStart="@dimen/dimen_margin_16"
          android:text="@string/ls_port"
          android:textColor="@color/colorBlack"
          android:textSize="16sp" />

      <com.qd.longchat.view.QDXEditText
          android:id="@+id/et_ls_port"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginEnd="@dimen/dimen_margin_16"
          android:layout_toEndOf="@+id/tv_ls_port"
          android:background="@color/colorWhite"
          android:hint="@string/ls_port_hint"
          android:inputType="number"
          android:singleLine="true"
          android:textColor="@color/colorBlack"
          android:textColorHint="@color/colorTextUnFocused"
          android:paddingStart="20dp"
          android:textSize="16sp" />
   </RelativeLayout>

   <Button
       android:id="@+id/btn_ls_save"
       android:layout_width="match_parent"
       android:layout_height="@dimen/dimen_btn_height"
       android:layout_marginStart="@dimen/dimen_margin_32"
       android:layout_marginEnd="@dimen/dimen_margin_32"
       android:layout_marginTop="40dp"
       android:background="@drawable/ic_rounded_rectangle_unfouce_btn"
       android:text="@string/ls_save"
       android:textColor="@color/colorWhite"
       android:textSize="16sp"
       />

</LinearLayout>