<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorActivityBackground"
    android:layout_height="match_parent">

    <include
        android:id="@+id/view_modify_title"
        layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_margin_16"
            android:text="@string/modify_pwd_old"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            />

        <com.qd.longchat.view.QDXEditText
            android:id="@+id/et_modify_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/modify_pwd_old_hint"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/colorTextUnFocused"
            android:password="true"
            android:textColor="@color/colorBlack"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_margin_16"
            android:text="@string/modify_pwd_new"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            />

        <com.qd.longchat.view.QDXEditText
            android:id="@+id/et_modify_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:hint="@string/modify_pwd_new_hint"
            android:textSize="16sp"
            android:textColorHint="@color/colorTextUnFocused"
            android:password="true"
            android:textColor="@color/colorBlack"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_margin_16"
            android:text="@string/modify_pwd_confirm"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            />

        <com.qd.longchat.view.QDXEditText
            android:id="@+id/et_modify_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:hint="@string/modify_pwd_confirm_hint"
            android:textSize="16sp"
            android:textColorHint="@color/colorTextUnFocused"
            android:password="true"
            android:textColor="@color/colorBlack"
            />

    </LinearLayout>


</LinearLayout>