<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/view_mc_title"
        layout="@layout/view_head_white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/meeting_title"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <com.gavin.giframe.widget.GIEditText
                    android:id="@+id/et_mc_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/dimen_margin_16"
                    android:background="@null"
                    android:hint="@string/meeting_title_hint"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/meeting_content"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <com.gavin.giframe.widget.GIEditText
                    android:id="@+id/et_mc_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/dimen_margin_16"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/meeting_content_hint"
                    android:maxLength="50"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine" />
            <LinearLayout
                android:id="@+id/ll_mc_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/meeting_start_time"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_mc_start_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end|center"
                    android:hint="@string/meeting_start_time_hint"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dimen_margin_16"
                    android:src="@mipmap/im_arrow_right" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine" />

            <LinearLayout
                android:id="@+id/ll_mc_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/meeting_end_time"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_mc_end_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end|center"
                    android:hint="@string/meeting_end_time_hint"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dimen_margin_16"
                    android:src="@mipmap/im_arrow_right" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_mc_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:text="@string/meeting_member"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_mc_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end|center"
                    android:hint="@string/meeting_member_hint"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <com.gavin.giframe.widget.GITextView
                    android:id="@+id/tv_addUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/font_add_circle"
                    android:textColor="@color/view_head_bg"
                    android:textSize="@dimen/font_medium" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_mc_start"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_rounded_rectangle_btn"
                android:text="@string/meeting_start"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>