<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/select_time"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#11112233" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp">

                <com.qd.longchat.view.QDPickerView
                    android:id="@+id/year_pv"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/year"
                    android:textColor="#333333"
                    android:textSize="18sp" />

                <com.qd.longchat.view.QDPickerView
                    android:id="@+id/month_pv"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/month"
                    android:textColor="#333333"
                    android:textSize="18sp" />

                <com.qd.longchat.view.QDPickerView
                    android:id="@+id/day_pv"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/day"
                    android:textColor="#333333"
                    android:textSize="18sp" />

                <com.qd.longchat.view.QDPickerView
                    android:id="@+id/hour_pv"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/tv_hour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hour"
                    android:textColor="#333333"
                    android:textSize="18sp" />

                <com.qd.longchat.view.QDPickerView
                    android:id="@+id/minute_pv"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/tv_minute"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/minute"
                    android:textColor="#333333"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>